fix(css): fix shadow on icons in feature
Makes use of filter: drop-shadow() property to follow the icon instead
of the container box. The previous method created an unfilled gap
between container and the image itself causing shadow to be cut off

--- a/css/main.scss
+++ b/css/main.scss
@@ -14,6 +14,7 @@ $dark-textcolor: #0b081c;
 $shadow-color: #e9dfff4d;
 $shadow-color-2: #bb9bff26;
 $shadow-color-3: #9525c9bf;
+$icon-shadow: #591dddbf;
 $footer-text-color: #939393;
 
 $padding: clamp(20px, 6.6667vw - 1.333px, 30px);
@@ -294,7 +295,7 @@ nav {
         line-height: 1.4;
     }
     .icon {
-        @include box-shadow-2($shadow-color-3);
+        filter: drop-shadow(0px 0px 36px $icon-shadow);
         display: block;
         width: 50px;
         height: 50px;
